--- a/backend/package.json
+++ b/backend/package.json
@@ -2,5 +2,24 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "sequelize": "^6.25.7"
+  },
+  "scripts": {
+    "test:jobs": "./scripts/test.sh --verbose test/core/jobs"
+  },
+  "devDependencies": {
+    "eslint": "^8.28.0",
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.1"
+  },
+  "imports": {
+    "#src": "./src/*.js"
+  },
+  "type": "module"
 }
