--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,16 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "sequelize": "^6.25.7"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.7",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "test:jobs": "./scripts/test.sh --verbose test/core/jobs"
   },
   "devDependencies": {
     "eslint": "^8.28.0",
+    "eslint-plugin-filenames-simple": "^0.8.0",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.1"
