Add camelcase rule

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -40,6 +40,12 @@
                 "rule": "snake_case",
                 "excepts": ["index"]
             }
+        ],
+        "camelcase":[
+            "error"
+            {
+                "properties": "never"
+            }
         ]
     }
 }
