Add ignoreDestructuring property and fix syntax error

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -42,9 +42,10 @@
             }
         ],
         "camelcase":[
-            "error"
+            "error",
             {
-                "properties": "never"
+                "properties": "never",
+                "ignoreDestructuring": true
             }
         ]
     }
