--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "test:jobs": "./scripts/test.sh --verbose test/core/jobs",
     "test:users": "./scripts/test.sh --verbose test/core/users",
+    "test:postulates": "./scripts/test.sh --verbose test/core/postulates",
     "dev": "./scripts/dev.sh"
   },
   "devDependencies": {
